<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>fsds_visuals</name>
    <version>0.0.0</version>
    <description>Publishes FSDS visuals for RVIZ2</description>
    <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
    <license>GPLv2</license>

    <depend>fs_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
